--- a/client-myjss/src/app/modules/my-services/announcement/announcement.component.html
+++ b/client-myjss/src/app/modules/my-services/announcement/announcement.component.html
@@ -1,63 +1,78 @@
-<section class="container ">
+<section class="container pt-5">
   <div class="py-sm-3 py-md-4 py-lg-5 my-xxl-3">
     <div class="row pt-md-2 pt-lg-3 pt-xl-4 pb-lg-2 pb-xl-3">
       <div class="col-md-6">
-        <h1 class="h1 pe-xxl-5 me-xl-4 mb-md-0">LA solution pour vos annonces légales</h1>
+        <h1 class="h1 pe-xxl-5 me-xl-4 mb-md-0 text-white">LA solution pour vos annonces légales</h1>
       </div>
 
       <div class="col-md-6 col-xl-5 offset-xl-1">
-        <p class="text-body fs-xl mb-5">Publiez vos annonces légales en ligne sur myjss.fr partout en France
+        <p class="text-body fs-xl mb-5 text-white">Publiez vos annonces légales en ligne sur myjss.fr partout en France
           grâce à notre réseau. Profitez de l'assistance de nos experts par téléphone et par mail. </p>
-        <double-buttons [orderActionLabel]="orderActionLabel" [quotationActionLabel]="quotationActionLabel"
-          [linkLabel]="linkLabel">
+        <double-buttons orderActionLabel="Publier une annonce légale" quotationActionLabel="Demander un devis"
+          linkLabel="Consulter une annonce légale">
         </double-buttons>
       </div>
     </div>
   </div>
 </section>
+
+<div class="jarallax" data-jarallax data-speed="0.6">
+  <div class="jarallax-img" style="background-image: url(assets/img/announcement/annonce_bandeau_img.jpg);"></div>
+  <div class="d-none d-xxl-block" style="height: 830px; margin-top: -470px;"></div>
+  <div class="d-none d-xl-block d-xxl-none" style="height: 780px; margin-top: -490px;"></div>
+  <div class="d-none d-lg-block d-xl-none" style="height: 700px; margin-top: -560px;"></div>
+  <div class="d-none d-sm-block d-lg-none" style="height: 520px; margin-top: -450px;"></div>
+  <div class="d-sm-none" style="height: 500px; margin-top: -450px;"></div>
+</div>
+
 <explaination-video></explaination-video>
 
 <description-my-account></description-my-account>
 
 <section class="container pt-5 mt-lg-3 mt-xl-4 mt-xxl-5">
-  <div class="bg-primary rounded-5 overflow-hidden mt-2 mt-sm-4 mt-lg-5">
-    <img class="position-absolute top-50 start-0 translate-middle-y d-none d-md-block" style="z-index: 0;"
-      src="assets/img/landing/yoga-studio/cta/bg.svg" width="186" alt="Background flower">
+  <div class="bg-primary rounded-5 overflow-hidden mt-2 mt-sm-4 mt-lg-5" style="position: relative;">
+    <!-- Image positionnée absolument, sans affecter la taille du bloc -->
+    <img class="position-absolute top-50 start-0 translate-middle-y d-none d-md-block"
+      style="z-index: 0; width: 186px; max-height: 100%;" src="assets/img/landing/yoga-studio/cta/bg.svg"
+      alt="Background flower">
+
+    <!-- Contenu de la section -->
     <div class="row position-relative z-2 align-items-center">
       <div class="col-md-6 col-lg-5 offset-lg-1">
         <div class="text-center text-md-start py-5 px-4 px-sm-5 pe-md-0 ps-lg-4 ps-xl-5">
           <div class="d-flex align-items-center justify-content-center justify-content-md-start mb-2">
             <span class="bg-white opacity-70 me-2 d-none d-md-block"
               style="width: 40px; height: 1px; margin-top: -1px;"></span>
-            <span class="fs-xs fw-semibold text-white opacity-70 text-uppercase">Annonce légale </span>
+            <span class="fs-xs fw-semibold text-white opacity-70 text-uppercase">Annonce légale</span>
           </div>
-          <h2 class="h1 text-white pb-2 pb-sm-3">N'attendez plus et accédez à nos solutions</h2>
-          <double-buttons [orderActionLabel]="orderActionLabel" [quotationActionLabel]="quotationActionLabel"
-            [linkLabel]="linkLabel"></double-buttons>
+          <h2 class="h1 pb-2 pb-sm-3 text-white">N'attendez plus et accédez à nos solutions</h2>
+          <double-buttons orderActionLabel="Publier une annonce légale" quotationActionLabel="Demander un devis"
+            linkLabel="Consulter une annonce légale"></double-buttons>
         </div>
       </div>
-      <div class="col-md-6">
-        <img class="d-block mx-auto mx-md-0 mt-n4 mt-md-0" src="assets/img/landing/yoga-studio/cta/image.png"
-          width="534" alt="Image">
+      <div class="col-md-6 holo-img">
+        <img class="d-block mx-auto mx-md-0 mt-n4 mt-md-0" src="assets/img/announcement/holo_didier.png" alt="Image">
       </div>
     </div>
   </div>
 </section>
 
+
+
 <section class="py-5">
   <div class="container py-3 py-sm-4 py-lg-5 my-md-2 my-lg-3 my-xl-4 my-xxl-5">
     <div class="text-center">
-      <h2 class="h1 pb-3 mb-lg-4">Votre allié juridique de confiance</h2>
+      <h2 class="h1 pb-3 mb-lg-4 text-white">Votre allié juridique de confiance</h2>
       <p>Optimisez vos démarches sur MYJSS la plateforme intuitive et performante du Journal Spécial des Sociétés</p>
     </div>
     <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-3 g-4 pb-xl-2 pb-xxl-3">
 
       <!-- Item -->
       <div class="col">
-        <div class="card h-100 border-0 rounded-5 bg-secondary">
+        <div class="card h-100 border-0 rounded-5 ">
           <div class="card-body pb-3">
             <img src="assets/img/icons/assistance_dedie.svg" alt="Icon">
-            <h3 class="h4">Assistance dédiée</h3>
+            <h3 class="h4 text-white">Assistance dédiée</h3>
             <p class="mb-0">Nos équipes spécialisées sont à votre disposition pour vous conseiller, par téléphone ou
               par e-mail. Bénéficiez d'un accompagnement précis et personnalisé !</p>
           </div>
@@ -68,10 +83,10 @@
 
       <!-- Item -->
       <div class="col">
-        <div class="card h-100 border-0 rounded-5 bg-secondary">
+        <div class="card h-100 border-0 rounded-5">
           <div class="card-body pb-3">
             <img src="assets/img/icons/expertise_reconnue.svg" alt="Icon">
-            <h3 class="h4">Expertise sur mesure</h3>
+            <h3 class="h4 text-white">Expertise sur mesure</h3>
             <p class="mb-0">Nous garantissons un service premium, incluant le conseil, la relecture approfondie, et la
               rédaction optimisée de vos annonces légales, pour un traitement efficace !</p>
           </div>
@@ -83,10 +98,10 @@
 
       <!-- Item -->
       <div class="col">
-        <div class="card h-100 border-0 rounded-5 bg-secondary">
+        <div class="card h-100 border-0 rounded-5 ">
           <div class="card-body pb-3">
             <img src="assets/img/icons/attestation_immediate.svg" alt="Icon">
-            <h3 class="h4">Attestation immédiate</h3>
+            <h3 class="h4 text-white">Attestation immédiate</h3>
             <p class="mb-0">Obtenez en quelques secondes votre attestation de parution, disponible 24h/24 et 7j/7.
               Simplifiez vos formalités en accédant instantanément à vos documents.</p>
           </div>
@@ -98,10 +113,10 @@
 
       <!-- Item -->
       <div class="col">
-        <div class="card h-100 border-0 rounded-5 bg-secondary">
+        <div class="card h-100 border-0 rounded-5 ">
           <div class="card-body pb-3">
             <img src="assets/img/icons/Tarifs_avantageux.svg" alt="Icon">
-            <h3 class="h4">Tarifs avantageux</h3>
+            <h3 class="h4 text-white">Tarifs avantageux</h3>
             <p class="mb-0">Bénéficiez des prix réglementés garantis chaque année par arrêté ministériel. Maximisez la
               rentabilité de vos démarches sans compromis !</p>
           </div>
@@ -112,9 +127,9 @@
       </div>
       <!-- Item -->
       <div class="col">
-        <div class="card h-100 border-0 rounded-5 text-center text-align-center bg-secondary">
+        <div class="card h-100 border-0 rounded-5 text-center text-align-center background-yellow">
           <div class="card-body pb-3">
-            <h3 class="h4">MYJSS <br> la plateforme intuitive et innovante pour vos démarches !</h3>
+            <h3 class="h4 text-blue">MYJSS <br> la plateforme intuitive et innovante pour vos démarches !</h3>
           </div>
           <div class="card-footer border-0 pt-3 mb-3">
           </div>
@@ -123,10 +138,10 @@
 
       <!-- Item -->
       <div class="col">
-        <div class="card h-100 border-0 rounded-5 bg-secondary">
+        <div class="card h-100 border-0 rounded-5 ">
           <div class="card-body pb-3">
             <img src="assets/img/icons/couverture_nationale.svg" alt="Icon">
-            <h3 class="h4">Couverture nationale</h3>
+            <h3 class="h4 text-white">Couverture nationale</h3>
             <p class="mb-0">Le JSS publie des annonces judiciaires et légales dans toute la France ! Publiez également
               au BALO, BODACC et au Journal Officiel selon vos besoins.</p>
           </div>
@@ -149,7 +164,7 @@
     </div>
     <div class="col-md-6 col-xl-5 offset-xl-1">
       <div class="ps-md-4 ps-xl-0">
-        <h3 class="h4">Qui est concerné par la publication d'une annonce légale ? </h3>
+        <h3 class="h4 text-white">Qui est concerné par la publication d'une annonce légale ? </h3>
         <p class="pb-3 mb-3 mb-xl-4">Chez MYJSS, nous accompagnons plus de 5 000 entreprises chaque année dans la
           publication de leurs annonces légales via un journal habilité (JAL). Cette formalité concerne principalement
           les sociétés, comme les SARL, SAS ou SA, pour notifier les événements clés de leur vie juridique : création,
@@ -161,15 +176,15 @@
         <div class="d-flex d-md-none d-lg-flex justify-content-between w-100 pb-4 pb-xl-5 mb-2 mb-sm-3 mb-xl-2"
           style="max-width: 440px;">
           <div class="pe-4">
-            <div class="h2 mb-1">+ 5000</div>
+            <div class="h2 mb-1 text-white">+ 5000</div>
             <div class="fs-sm">entreprises accompagnées/an</div>
           </div>
           <div class="pe-4">
-            <div class="h2 mb-1">98%</div>
+            <div class="h2 mb-1 text-white">98%</div>
             <div class="fs-sm"> de démarches finalisées en 24h</div>
           </div>
           <div>
-            <div class="h2 mb-1">97%</div>
+            <div class="h2 mb-1 text-white">97%</div>
             <div class="fs-sm">de clients satisfaits</div>
           </div>
         </div>
@@ -179,10 +194,10 @@
 </section>
 
 
-<section class="bg-secondary py-5">
+<section class=" py-5">
   <div class="container py-3 py-sm-4 py-lg-5 my-md-2 my-lg-3 my-xl-4 my-xxl-5">
     <div class="text-center">
-      <h2 class="h1 pb-3 mb-lg-4">Nos services</h2>
+      <h2 class="h1 pb-3 mb-lg-4 text-white">Nos services</h2>
       <p>Nous proposons une large gamme de services de formalités, adaptés à vos besoins pour simplifier vos démarches
         administratives.</p>
     </div>
@@ -191,7 +206,7 @@
         <div class="card h-100 border-0 rounded-5">
           <div class="card-body pb-3">
             <img src="assets/img/icons/Formalite.svg" alt="Icon">
-            <h3 class="h4">Formalité légale</h3>
+            <h3 class="h4 text-white">Formalité légale</h3>
             <p class="mb-0">Un accompagnement complet pour toutes vos formalités juridiques.</p>
           </div>
           <div class="card-footer border-0 pt-3 mb-3">
@@ -209,7 +224,7 @@
         <div class="card h-100 border-0 rounded-5">
           <div class="card-body pb-3">
             <img src="assets/img/icons/Apostille.svg" alt="Icon">
-            <h3 class="h4">Apostille & Légalisation</h3>
+            <h3 class="h4 text-white">Apostille & Légalisation</h3>
             <p class="mb-0">Authentification rapide et conforme de vos documents valable à internationale.</p>
           </div>
           <div class="card-footer border-0 pt-3 mb-3">
@@ -226,7 +241,7 @@
         <div class="card h-100 border-0 rounded-5">
           <div class="card-body pb-3">
             <img src="assets/img/icons/Domiciliation.svg" alt="Icon">
-            <h3 class="h4">Domiciliation</h3>
+            <h3 class="h4 text-white">Domiciliation</h3>
             <p class="mb-0">Une domiciliation au cœur de Paris avec gestion simplifiée.</p>
           </div>
           <div class="card-footer border-0 pt-3 mb-3">
@@ -243,7 +258,7 @@
         <div class="card h-100 border-0 rounded-5">
           <div class="card-body pb-3">
             <img src="assets/img/icons/Fourniture_documents.svg" alt="Icon">
-            <h3 class="h4">Fourniture de documents</h3>
+            <h3 class="h4 text-white">Fourniture de documents</h3>
             <p class="mb-0">Vos documents officiels fournis rapidement et en toute conformité.</p>
           </div>
           <div class="card-footer border-0 pt-3 mb-3">
