--- a/client-myjss/src/app/modules/miscellaneous/components/explaination-video/explaination-video.component.css
+++ b/client-myjss/src/app/modules/miscellaneous/components/explaination-video/explaination-video.component.css
@@ -22,7 +22,8 @@ button {
   cursor: pointer;
 }
 
-.background-card {
-  background-color: #FFFFFF08;
+.video-display {
+  width: 100%;
   height: 100%;
+  padding-bottom: 56.25%
 }
