--- a/client-myjss/src/app/modules/my-services/announcement/announcement.component.css
+++ b/client-myjss/src/app/modules/my-services/announcement/announcement.component.css
@@ -1,19 +1,31 @@
-.background-card {
-  background-color: #220966;
-  width: 100%;
-  height: 100%;
-
-  background-position: top, 2541px;
-  background-size: cover, cover;
-  background-attachment: fixed, scroll;
+.bg-primary {
+  position: relative;
+  height: 400px;
+  overflow: hidden;
 }
 
-.background-blue {
-  width: 100%;
-  height: 100%;
+.bg-primary img {
+  position: absolute;
+  top: 50%;
+  right: 200px;
+  transform: translateY(-50%);
+  max-height: 100%;
+  z-index: 0;
+}
 
-  background-position: top, 2541px;
-  background-repeat: no-repeat, repeat-y;
-  background-size: cover, cover;
-  background-attachment: fixed, scroll;
+.holo-img img {
+  max-width: 100%;
+  height: auto;
+  z-index: 1;
+}
+
+.row {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100%;
+}
+
+.background-yellow {
+  background: #F3E3CA;
 }
