--- a/client-myjss/src/app/modules/miscellaneous/components/explaination-video/explaination-video.component.css
+++ b/client-myjss/src/app/modules/miscellaneous/components/explaination-video/explaination-video.component.css
@@ -1,10 +1,3 @@
-.video-container {
-  position: relative;
-  width: 100%;
-  max-width: 100%;
-  margin: auto;
-}
-
 video {
   width: 100%;
   height: auto;
@@ -25,5 +18,6 @@ button {
 .video-display {
   width: 100%;
   height: 100%;
-  padding-bottom: 56.25%
+  padding-bottom: 56.25%;
+
 }
