--- a/client-myjss/src/app/modules/my-services/announcement/announcement.component.html
+++ b/client-myjss/src/app/modules/my-services/announcement/announcement.component.html
@@ -63,7 +63,7 @@
   <div class="container py-3 py-sm-4 py-lg-5 my-md-2 my-lg-3 my-xl-4 my-xxl-5">
     <div class="text-center">
       <h2 class="h1 pb-3 mb-lg-4 text-white">Votre allié juridique de confiance</h2>
-      <p>Optimisez vos démarches sur MYJSS la plateforme intuitive et performante du Journal Spécial des Sociétés</p>
+      <p>Optimisez vos démarches sur MyJSS la plateforme intuitive et performante du Journal Spécial des Sociétés</p>
     </div>
     <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-3 g-4 pb-xl-2 pb-xxl-3">
 
